Update NDTV Food Blog.html

--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -79,8 +79,8 @@
     <div class="main">
         <div class="logo"><img src=""/></div>
         <div class="title">
-            <h1 style="background-color:transparent;color:green;text-align:center;">NDTV Food Blog</h1>
-        </div>
+            <img src="Picsart_24-07-08_10-14-51-228.jpg" />
+                </div>
         <nav class="navi">
             <ul>
                 <li><a href="https:google.co.in" target="article_display">Google</a></li>
