Update NDTV Food Blog.html

--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -79,7 +79,7 @@
     <div class="main">
         <div class="logo"><img src=""/></div>
         <div class="title">
-            <img style="height:100px;width:100%;" src="https://github.com/jayachandra2/NDTV-Food-Blog/blob/main/Picsart_24-07-08_10-14-51-228.jpg" />
+            <img style="height:100px;width:500px;" src="https://github.com/jayachandra2/NDTV-Food-Blog/blob/main/Picsart_24-07-08_10-14-51-228.jpg" />
                 </div>
         <nav class="navi">
             <ul>
