--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -79,7 +79,7 @@
     <div class="main">
         <div class="logo"><img src=""/></div>
         <div class="title">
-            <img style="height:100px;width:500px;" src="https://github.com/jayachandra2/NDTV-Food-Blog/blob/main/ndtv title card.png" />
+            <img style="height:100px;width:500px;" src="main/ndtv title card.png" />
                 </div>
         <nav class="navi">
             <ul>
