title_image style update

--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -71,6 +71,11 @@
             color:red;
 
         }
+        #title_image{
+            height:150px;
+            width:500px;
+        }
+
         @media only screen and (max-width:600px)
         {
             #title_image{
@@ -86,7 +91,7 @@
     <div class="main">
         <div class="logo"><img src=""/></div>
         <div class="title">
-            <img id="title_image" style="height:100px;width:500px;" src="main/ndtv title card.png" />
+            <img id="title_image" src="main/ndtv title card.png" />
                 </div>
         <nav class="navi">
             <ul>
