media screen main margin update for mobile screen is done

--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -82,6 +82,9 @@
                 height:100px;
                 width:100%;
             }
+            .main{
+                margin:0;
+            }
         }
 
     </style>
