media screen pixel change update in mobile screen

--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -84,6 +84,7 @@
             }
             .main{
                 margin:0;
+                grid-auto-rows:minmax(120px,auto);
             }
         }
 
