--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -58,6 +58,7 @@
             margin:0;
         }
         li{
+            border-bottom:solid thin gray;
             background-color:rgb(255,255,0,0.8);
             position:relative;
             width:100%;
@@ -79,7 +80,7 @@
         @media only screen and (max-width:600px)
         {
             #title_image{
-                height:100px;
+                height:110px;
                 width:100%;
             }
             .main{
