--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
- <link src="jayachandra2/NDTV-Food-Blog/Mainstyles.css " type="text/css"/>  
+ <link src="jayachandra2/NDTV-Food-Blog/Mainstyles.css " rel="stylesheet" type="text/css"/>  
 </head>
 <body>
     <div class="main">
