--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
         <div class="title">
-            <img id="title_image" src="main/ndtv title card.png" />
+            <img id="title_image" src="./Picsart_24-07-08_10-14-51-228.jpg" />
                 </div>
         <nav class="navi">
             <ul>
