--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
- <link rel="stylesheet" type="text/css" href="./Mainstyles.css">  
+ <link rel="stylesheet" type="text/css" href="jayachandra2/NDTV-Food-Blog/Mainstyles.css">  
 </head>
 <body>
     <div class="main">
         <div class="title">
-            <img id="title_image" src="./Picsart_24-07-08_10-14-51-228.jpg" />
+            <img id="title_image" src="./ndtv food blog.jpg" />
                 </div>
         <nav class="navi">
             <ul>
