--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -72,12 +72,12 @@
             }
         .main{
                margin:0;
-                
+                grid-auto-rows:minmax(105px,auto);
             }
         .title 
             {
                 width:100%;
-                height:110px;
+                
             }
         }
 
