--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -52,6 +52,7 @@
             margin:0;
         }
         li{
+            border-bottom:1px solid white;
             background-color:rgb(255,255,0,0.8);
             position:relative;
             width:100%;
@@ -67,10 +68,9 @@
         }
         @media only screen and (max-width:600px)
         {
-            *{
-                background-color:gray;
-            }
+            
         .main{
+                background-color:grey;
                margin:0;
                 grid-auto-rows:minmax(110px,auto);
             }
