--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -77,7 +77,20 @@
         .title 
             {
                 width:100%;
+                background-color:gray;
                 
+            }
+            .navi
+            {
+                background-color:gray;
+            }
+            .articles
+            {
+                background-color:gray;
+            }
+            .addres
+            {
+                background-color:gray;
             }
         }
 
