--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -77,7 +77,7 @@
         .title 
             {
                 width:100%;
-                background-color:gray;
+                background-color:rgb(0,0,0);
                 
             }
             .navi
