--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -102,7 +102,7 @@
                 border-bottom:1px solid rgb(255,255,255,0.4);
             }
             a{
-                background-color:none;
+                background-color:transparent;
                 color:white;
             }
         }
