--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -62,7 +62,7 @@
         }
         a{
             
-            text-decoration:none;
+            text-decoration:transparent;
             color:red;
 
         }
@@ -82,27 +82,27 @@
                 border:0;
                 
             }
-            .navi
+        .navi
             {
                 background-color:rgb(0,0,0,0.5);
                 border:0;
             }
-            .articles
+        .articles
             {
                 background-color:rgb(0,0,0,0.5);
                 border:0;
             }
-            .addres
+        .addres
             {
                 background-color:rgb(0,0,0,0.5);
                 border:0;
             }
-            li{
-                background-color:rgb(0,0,0,0.5);
+        li{
+                background-color: rgb(0,0,0,0.5);
                 border-bottom:1px solid rgb(255,255,255,0.4);
             }
-            a{
-                background-color: rgb(0,0,0,0.7);
+        a{
+                background-color: transparent;
                 color:white;
             }
         }
