--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
+    <link href="" >
  <!--  <link src="/storage/emulated/0/Download/NDTV Food Blog/styles/Untitled-3.css" type="text/css"/>  -->
    <style>
        *{
@@ -124,7 +126,15 @@
             </ul>
         </nav>
         <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
-        <div class="addres" ></div>
+        <div class="addres" >
+
+            <hr style="border-color:black;">
+            </br>
+            <i class="fa fa-phone" style="margin-left: 130px;">&nbsp;+91 1234567890&nbsp;</i>
+        </br>
+            <i class="fa fa-envelope" style="margin-left:100px;">&nbsp;ndtvfoodblog<i class="fa fa-at"></i>gmail.com</i>
+            <i class="fa fa-copyright" style="margin-left:150px;">&nbsp;NDTV&nbsp;Licence</i>
+        </div>
 
     </div>
 </body>
