--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -120,7 +120,7 @@
         <nav class="navi">
             <ul>
                 <li><a href="https:google.co.in" target="article_display">Google</a></li>
-                <li><a href="#">Link 2</a></li>
+                <li><a href="https://jayachandra2.github.io/NDTV-FOOD-BLOG/channa masala.html" target="article_display">Link 2</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li> <!---->
             </ul>
