--- a/channa masala.html
+++ b/channa masala.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:rgb(0,0,0,0.7)">
+<body >
     <p style="color:white;">This is the link page testing</p>
 </body>
 </html>
