--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -64,6 +64,7 @@
 
         }
         #title_font{
+            margin-top:40px;
             color:aliceblue;
             font-style: normal;
             font-variant:small-caps;
