--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -64,10 +64,10 @@
 
         }
         #title_font{
-            margin-top:40px;
+            margin-top:30px;
             color:aliceblue;
-            font-style: normal;
-            font-variant:small-caps;
+            font-style:normal;
+            font-variant-caps: all-small-caps;
         }
 
         @media only screen and (max-width:600px)
@@ -138,12 +138,12 @@
         <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
         <div class="addres" >
 
-            <hr style="border-color:black;">
+            <hr style="border-color:black;border-size:1px;">
             </br>
             <i class="fa fa-phone" style="margin-left: 130px;">&nbsp;+91 1234567890&nbsp;</i>
         </br>
             <i class="fa fa-envelope" style="margin-left:100px;">&nbsp;ndtvfoodblog<i class="fa fa-at"></i>gmail.com</i>
-            <i class="fa fa-copyright" style="margin-left:150px;">&nbsp;2024&nbsp;NDTV&nbsp;Licence</i>
+            <i class="fa fa-copyright" style="margin-left:120px;">&nbsp;2024&nbsp;NDTV&nbsp;Licence</i>
         </div>
 
     </div>
