--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--this is the head link to access the freefont website to use the free font icons in our site-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
     <link href="" >
- <!--  <link src="/storage/emulated/0/Download/NDTV Food Blog/styles/Untitled-3.css" type="text/css"/>  -->
-   <style>
+  <link src="jayachandra2/NDTV-Food-Blog/Mainstyles.css" type="text/css"/> 
+  <!-- <style>
        *{
             box-sizing:border-box;
             padding:0px;
@@ -118,14 +118,14 @@
             }
         }
 
-    </style>
+    </style>-->
 
 </head>
 <body>
     <div class="main">      
           <div class="title" style="background:linear-gradient(rgb(0,0,0,0.4),rgb(0,0,0,0.8),left);">
-           <!-- <img id="title_image" src="./ndtv food blog.jpg" />-->
-              <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1>
+            <img id="title_image" src="./ndtv food blog.jpg " />
+             <!-- <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1> -->
         </div>
         <nav class="navi">
             <ul>
