Update NDTV Food Blog.html

--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
     <link href="" >
-  <link src="https://jayachandra2/NDTV-Food-Blog/Mainstyles.css" type="text/css"/> 
+  <link src="https://jayachandra2.github.io/Mainstyles.css" type="text/css"/> 
   <!-- <style>
        *{
             box-sizing:border-box;
