--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
     <link href="" >
-  <link href="jayachandra2/NDTV-Food-Blog/Mainstyles.css" type="text/css"/> 
+  <link href="https://jayachandra2.github.io/NDTV-Food-Blog/Mainstyles.css" type="text/css" rel="stylesheet"/> 
   <!-- <style>
        *{
             box-sizing:border-box;
@@ -124,7 +124,7 @@
 <body>
     <div class="main">      
           <div class="title" style="background:linear-gradient(rgb(0,0,0,0.4),rgb(0,0,0,0.8),left);">
-            <img id="title_image" src="./ndtv food blog.jpg " />
+            <img id="title_image" src="./ndtv food blog.jpg "style="width:70vw;height:10vh;"/>
              <!-- <h1 id="title_font"style="text-align: center;">ndtv food Blog </h1> -->
         </div>
         <nav class="navi">
