--- a/channa masala.html
+++ b/channa masala.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <style>
     
-            
+            *{
+                margin:0;
+            }
             ul{
                 list-style-type:circle;
                 color:rgb(255,255,255,0.8);
