--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -138,7 +138,7 @@
         <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
         <div class="addres" >
 
-            <hr style="border-color:black;border-size:1px;">
+            <hr style="border-color:black;">
             </br>
             <i class="fa fa-phone" style="margin-left: 130px;">&nbsp;+91 1234567890&nbsp;</i>
         </br>
