--- a/channa masala.html
+++ b/channa masala.html
@@ -45,8 +45,24 @@
     <li>Tamoto Paste 1cup</li>
     <li>Garam Masala 1Tbsp</li>
     <li>Bay Leaf 2 leaf</li>
+    <li>cardamon seeds 1</li>
+    <li>clove 2</li>
+    <li>Fennel seeds</li>
     <li>Cinnamon Stem 1inch</li>
     <li>Coriander leafs few</li>
+</ul>
+</br>
+<p>Preparation : </p>
+<ul>
+    <li>First soak chikpeas overnight or for atleast 8hours.</li>
+    <li>Now took the soaked chikpeas and put in pressurre cooker and cook it for 4 to 5 whistles</li>
+    <li>Now took pan and put on stove and lit it.Now pour oil and put all bayleaf,cinnamon stick,cardamon,clove and Fennel seeds in it and fry for half minute</br>
+    </li>
+    <li>Now add chopped onions and fry till we get golden color.</li>
+    <li>Then add ginger garlic paste,turmeric powder,chilli powder, salt and fry for a minute</li>
+    <li>Now add the tamoto paste to it and fry for 5 minute and add garam masala,aamchur powder after that pour 300ml water.</li>
+    <li>Then add the boiled chikpeas in it and stir all the mixture and put it on small flame and make it thick consistent and off stove. </li>
+    <li>Finally take it to bowl and garnish with coriander leafs from top</li>
 </ul>
     </article>
 </body>
