--- a/channa masala.html
+++ b/channa masala.html
@@ -8,6 +8,7 @@
     
             *{
                 margin:0;
+                background-color:rgb(0,0,0,0.5);
             }
             ul{
                 list-style-type:circle;
