--- a/channa masala.html
+++ b/channa masala.html
@@ -8,7 +8,6 @@
     
             *{
                 margin:0;
-                background-color:rgb(0,0,0,0.5);
             }
             ul{
                 list-style-type:circle;
@@ -28,7 +27,7 @@
     </style>
 </head>
 <body style="background-color:rgb(0,0,0,0.5);">
-    <article style="margin:5px;background-color:rgb(0,0,0,0.5);height:750px;">
+    <article style="margin:5px;background-color:rgb(0,0,0,0.5);height:auto;">
     <h2 style="color:rgb(255,255,255,0.8);font-variant:small-caps;margin-left:50px;padding-top:30px;">channa masala</h2>
     </br>
     <hr style="border-color:rgb(0,0,0,0.8);"/>
