--- a/channa masala.html
+++ b/channa masala.html
@@ -26,7 +26,7 @@
     
     </style>
 </head>
-<body style="background-color:rgb(0,0,0,0.5);">
+<body >
     <article style="margin:5px;background-color:rgb(0,0,0,0.5);height:auto;">
     <h2 style="color:rgb(255,255,255,0.8);font-variant:small-caps;margin-left:50px;padding-top:30px;">channa masala</h2>
     </br>
