--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -15,10 +15,10 @@
         </div>
         <nav class="navi">
             <ul>
-                <li><a href="https:google.co.in" target="article_display">Gooley</a></li>
-                <li><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li> <!---->
+                <li class="links"><a href="https:google.co.in" target="article_display">Golu</a></li>
+                <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
+                <li class="links"><a href="#">About Us</a></li>
+                <li class="links"><a href="#">Contact</a></li> <!---->
             </ul>
         </nav>
         <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
