--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="navi">
             <ul>
-                <li class="links"><a href="https:google.co.in" target="article_display">ogle</a></li>
+                <li class="links"><a href="https:google.co.in" target="article_display">Google</a></li>
                 <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
                 <li class="links"><a href="#">About Us</a></li>
                 <li class="links"><a href="#">Contact</a></li> <!---->
