--- a/NDTV Food Blog.html
+++ b/NDTV Food Blog.html
@@ -26,10 +26,10 @@
 
             <hr style="border-color:black;">
             </br>
-            <i class="fa fa-phone" style="margin-left: 130px;">&nbsp;+91 1234567890&nbsp;</i>
+            <i class="fa fa-phone" id="icon_styles" >&nbsp;+91 1234567890&nbsp;</i>
         </br>
-            <i class="fa fa-envelope" style="margin-left:100px;">&nbsp;ndtvfoodblog<i class="fa fa-at"></i>gmail.com</i>
-            <i class="fa fa-copyright" style="margin-left:120px;">&nbsp;2024&nbsp;NDTV&nbsp;Licence</i>
+            <i class="fa fa-envelope" id="icon_styles" >&nbsp;ndtvfoodblog<i class="fa fa-at"></i>gmail.com</i>
+            <i class="fa fa-copyright" id="icon_styles" >&nbsp;2024&nbsp;NDTV&nbsp;Licence</i>
         </div>
 
     </div>
