--- a/list.html
+++ b/list.html
@@ -15,6 +15,7 @@
  </div>
 <nav class="navi">
 <ul>
+    <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/Home.html">Home</a></li>
     <li class="links"><a href="https:google.co.in" target="article_display">Social Networking</a></li>
     <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
     <li class="links"><a href="#">Contact Us</a></li>
