--- a/Home.html
+++ b/Home.html
@@ -15,10 +15,8 @@
         </div>
         <nav class="navi">
             <ul>
-                <li class="links"><a href="https:google.co.in" target="article_display">Google</a></li>
-                <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
-                <li class="links"><a href="#">About Us</a></li>
-                <li class="links"><a href="#">Contact</a></li> <!---->
+                <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/list.html" target="article_display">Google</a></li>
+                
             </ul>
         </nav>
         <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
