--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
                 
             </ul>
         </nav>
-        <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
+    <!--    <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>-->
         <div class="addres" >
 
             <hr style="border-color:black;">
