--- a/Home.html
+++ b/Home.html
@@ -26,6 +26,14 @@
     First as a people of Andhra pradesh and especially from Nellore district which is famous for the <strong style="color:red;">"Nellore Chepala pulusu"</strong> which means Nellore fish curry
     its tasty and healthy also like that every region in our state has its own food and same for every state in India has different tastes and culture same comes in </br>
     food also. </p>
+    <p>Some famous cuisine from different states of India are as follows :</p>
+    <ul style="list-style-type:disc;">
+        <li>Andhra pradesh : <strong>Gutti vankaya Kura</strong></li>
+        <li>Telangana : <strong>Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
+        <li>Tamil Nadu : <strong>Idly,Dosa and Sambar</strong></li>
+        <li>Kerala : <strong></strong></li>
+        <li>Karnataka : <strong></strong></li>
+    </ul>
     </div>
         <div class="addres" >
 
