--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,6 @@
         <nav class="navi">
             <ul>
                 <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/list.html" target="_self">List</a></li>
-                
             </ul>
         </nav>
     <div class="articles">
@@ -28,11 +27,10 @@
     food also. </p>
     <p>Some famous cuisine from different states of India are as follows :</p>
     <ul style="list-style-type:disc;">
-        <li>Andhra pradesh : <strong>Gutti vankaya Kura</strong></li>
-        <li>Telangana : <strong>Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
-        <li>Tamil Nadu : <strong>Idly,Dosa and Sambar</strong></li>
-        <li>Kerala : <strong></strong></li>
-        <li>Karnataka : <strong></strong></li>
+        <li>Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
+        <li>Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
+        <li>Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
+        <li>Kerala : <strong style="color:yellow;">Idiyappam and Parota</strong></li>
     </ul>
     </div>
         <div class="addres" >
