--- a/Home.html
+++ b/Home.html
@@ -27,8 +27,8 @@
     food also. </p>
     <p>Some famous cuisine from different states of India are as follows :</p>
     <ul style="list-style-type:disc;">
-        <li>Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
-        <li>Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
+        <li style="background-color:transparent;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
+        <li style="background-color:transparent;">Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
         <li>Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
         <li>Kerala : <strong style="color:yellow;">Idiyappam and Parota</strong></li>
     </ul>
