--- a/Home.html
+++ b/Home.html
@@ -27,10 +27,10 @@
     food also. </p>
     <p>Some famous cuisine from different states of India are as follows :</p>
     <ul style="list-style-type:square;">
-        <li style="background-color:transparent;text-align:left;border:none;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
-        <li style="background-color:transparent;text-align:left;border:none;">Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
-        <li style="background-color:transparent;text-align:left;border:none;">Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
-        <li style="background-color:transparent;text-align:left;border:none;">Kerala : <strong style="color:yellow;">Idiyappam and Parota</strong></li>
+        <li style="background-color:transparent;border:none;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
+        <li style="background-color:transparent;border:none;">Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
+        <li style="background-color:transparent;border:none;">Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
+        <li style="background-color:transparent;border:none;">Kerala : <strong style="color:yellow;">Idiyappam and Parota</strong></li>
     </ul>
     </div>
         <div class="addres" >
