--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
         </nav>
     <div class="articles">
         <h2>Welcome to the NDTV Food Blog</h2>
-        <p>This blog is created mainly to reach all type of people especially foodies, who always try to eat different types of varieties
+        <p style="color:aliceblue;">This blog is created mainly to reach all type of people especially foodies, who always try to eat different types of varieties
         Food all over world .</br> Here we starting with Indian states favorite food and its recipies and how it came into their life as tasty and brings healthy</br>
     First as a people of Andhra pradesh and especially from Nellore district which is famous for the <strong style="color:burlywood;">"Nellore Chepala pulusu"</strong> which means Nellore fish curry
     its tasty and healthy also like that every region in our state has its own food and same for every state in India has different tastes and culture same comes in </br>
