--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
     its tasty and healthy also like that every region in our state has its own food and same for every state in India has different tastes and culture same comes in </br>
     food also. </p>
     <p>Some famous cuisine from different states of India are as follows :</p>
-    <ul style="list-style-type:square;">
+    <ul style="list-style-type:square;font-size:small;">
         <li style="background-color:transparent;border:none;text-align: left;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
         <li style="background-color:transparent;border:none;text-align: left">Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
         <li style="background-color:transparent;border:none;text-align: left">Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
