--- a/Home.html
+++ b/Home.html
@@ -20,14 +20,14 @@
         </nav>
     <div class="articles">
         <h2>Welcome to the NDTV Food Blog</h2>
-        <p style="color:aliceblue;">This blog is created mainly to reach all type of people especially foodies, who always try to eat different types of varieties
+        <p style="color:aliceblue;font-size: small;">This blog is created mainly to reach all type of people especially foodies, who always try to eat different types of varieties
         Food all over world .</br> Here we starting with Indian states favorite food and its recipies and how it came into their life as tasty and brings healthy</br>
     First as a people of Andhra pradesh and especially from Nellore district which is famous for the <strong style="color:burlywood;">"Nellore Chepala pulusu"</strong> which means Nellore fish curry
     its tasty and healthy also like that every region in our state has its own food and same for every state in India has different tastes and culture same comes in </br>
     food also. </p>
-    <p>Some famous cuisine from different states of India are as follows :</p>
+    <p style="font-size: small;">Some famous cuisine from different states of India are as follows :</p>
     <ul style="list-style-type:square;">
-        <li style="font-size:small;transparent;border:none;text-align: left;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
+        <li style="font-size:small;background-color:transparent;border:none;text-align: left;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
         <li style="font-size:small;background-color:transparent;border:none;text-align: left">Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
         <li style="font-size:small;background-color:transparent;border:none;text-align: left">Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
         <li style="font-size:small;background-color:transparent;border:none;text-align: left">Kerala : <strong style="color:yellow;">Idiyappam and Parota</strong></li>
