--- a/Home.html
+++ b/Home.html
@@ -28,8 +28,8 @@
     <p style="font-size: small;">Some famous cuisine from different states of India are as follows :</p>
     <ul style="list-style-type:square;">
         <li style="font-size:small;background-color:transparent;border:none;text-align: left;">Andhra pradesh : <strong style="color:yellow;">Gutti vankaya Kura</strong></li>
-        <li style="font-size:small;background-color:transparent;border:none;text-align: left">Telangana : <strong style="color:yellow;">Pacchi Pulusu and Hyderabadi Biriyani</strong></li>
-        <li style="font-size:small;background-color:transparent;border:none;text-align: left">Tamil Nadu : <strong style="color:yellow;">Idly,Dosa and Sambar</strong></li>
+        <li style="font-size:small;background-color:transparent;border:none;text-align: left">Telangana : <strong style="color:yellow;">Hyderabadi Biriyani</strong></li>
+        <li style="font-size:small;background-color:transparent;border:none;text-align: left">Tamil Nadu : <strong style="color:yellow;">Idly and Sambar</strong></li>
         <li style="font-size:small;background-color:transparent;border:none;text-align: left">Kerala : <strong style="color:yellow;">Idiyappam and Parota</strong></li>
     </ul>
     </div>
