--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="navi">
             <ul>
-                <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/list.html" target="_self">List</a></li>
+                <li class="links" style="height:2em;"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/list.html" target="_self">List</a></li>
             </ul>
         </nav>
     <div class="articles">
