--- a/list.html
+++ b/list.html
@@ -18,8 +18,8 @@
     <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/Home.html">Home</a></li>
     <li class="links"><a href="https:google.co.in" target="article_display">Social Networking</a></li>
     <li class="links"><a href="https://jayachandra2.github.io/NDTV-Food-Blog/channa%20masala.html" target="article_display">Channa Masala</a></li>
-    <li class="links"><a href="#">Contact Us</a></li>
-    <li class="links"><a href="#">Join Us</a></li> <!---->
+    <li class="links"><a href="#" target="article_display">Join Us</a></li>
+    <li class="links"><a href="#" target="article_display">Contact Us</a></li> <!---->
 </ul>
 </nav>
 <iframe class="articles" name="article_display" style="width:100%;height:100%;"></iframe>
