--- a/contact_us.html
+++ b/contact_us.html
@@ -14,6 +14,9 @@
             font-size:large;
             color:azure;
         }
+        body{
+            background-color:rgba(0,0,0,0.5);
+        }
         @media only screen and (max-width:600px)
         {
             .contact_para{
