--- a/contact_us.html
+++ b/contact_us.html
@@ -21,7 +21,7 @@
         {
             .contact_para{
                 font-size:small;
-                color:azure;
+                color:red;
             }
         }
     </style>
