--- a/contact_us.html
+++ b/contact_us.html
@@ -11,6 +11,8 @@
             padding:0;
         }
         .contact_para{
+            text-align:center;
+            margin-top:100px;
             font-size:large;
             color:azure;
         }
@@ -20,6 +22,8 @@
         @media only screen and (max-width:600px)
         {
             .contact_para{
+                text-align:center;
+                margin-top:50px;
                 font-size:small;
                 color:red;
             }
