--- a/contact_us.html
+++ b/contact_us.html
@@ -25,7 +25,11 @@
                 text-align:center;
                 margin-top:50px;
                 font-size:small;
-                color:red;
+                color:azure;
+            }
+            address{
+                font-size:medium;
+                color:azure;
             }
         }
     </style>
@@ -40,5 +44,14 @@
         If you have any suggestions or reports please share with us at</br>
         <a href="Mailto:help@NDTVFoodBlog.com">help@NDTVFoodBlog.com</a>
     </p>
+</br>
+</br>
+    <address>
+        Flat No:371,
+        TM Nagar,
+        Andheri west,
+        Mumbai, India
+        pin : 400068
+    </address>
 </body>
 </html>
