--- a/contact_us.html
+++ b/contact_us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NDTV Food Blog</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--this is used to import classes from font awesome site-->
     <style rel="stylesheet" type="text/css">
         *{
         
@@ -20,10 +21,15 @@
             background-color:rgba(0,0,0,0.5);
         }
         .contact_link{
+            border:none;
             text-align:center;
         }
         .contact_address{
+            color:azure;
             text-align:center;
+        }
+        i{
+            color:azure;
         }
         @media only screen and (max-width:600px)
         {
@@ -38,6 +44,7 @@
                 color:azure;
             }
             .contact_link{
+                border:none;
                 text-align:center;
             }
         }
@@ -47,7 +54,7 @@
     <p class="contact_para">
         If you want to join our team NDTVFoodBlog,</br>
         please send us mail:</br>
-        <a class="contact_link" href="Mailto:join@NDTVFoodBlog.com">Join@NDTVFoodBlog.com</a>
+        <i class="fa fa-envelope" ></i><a class="contact_link" href="Mailto:join@NDTVFoodBlog.com">Join@NDTVFoodBlog.com</a>
     </p>
     </br>
     <p class="contact_para">
