--- a/contact_us.html
+++ b/contact_us.html
@@ -21,6 +21,7 @@
             background-color:rgba(0,0,0,0.5);
         }
         .contact_link{
+            text-decoration:none;
             border:none;
             text-align:center;
         }
@@ -43,8 +44,8 @@
                 font-size:medium;
                 color:azure;
             }
-            .contact_link{
-                
+            .contact_link{      
+                text-decoration:none;
                 border:none;
                 text-align:center;
             }
