--- a/contact_us.html
+++ b/contact_us.html
@@ -54,18 +54,20 @@
 </head>
 <body>
     <p class="contact_para">
-        If you want to join our team NDTVFoodBlog,</br>
+        If you want to join our team,</br>
         please send us mail:</br>
-        <i class="fa fa-envelope" ></i><a class="contact_link" href="Mailto:join@NDTVFoodBlog.com">Join@NDTVFoodBlog.com</a>
+    </br><i class="fa fa-envelope" ></i>&nbsp;<a class="contact_link" href="Mailto:join@NDTVFoodBlog.com">Join<i class="fa fa-at"></i>NDTVFoodBlog.com</a>
     </p>
     </br>
     <p class="contact_para">
-        If you have any suggestions or reports please share with us at</br>
-        <a class="contact_link" href="Mailto:help@NDTVFoodBlog.com">help@NDTVFoodBlog.com</a>
+        If you have any suggestions or reports </br>please share with us at</br>
+    </br><i class="fa fa-envelope"></i>&nbsp;<a class="contact_link" href="Mailto:help@NDTVFoodBlog.com">help<i class="fa fa-at"></i>NDTVFoodBlog.com</a>
     </p>
 </br>
 </br>
+<p style="text-align:left;color:azure;">Contact Us At &nbsp;:</p>
     <address class="contact_address">
+
         Flat No:371,</br>
         TM Nagar,</br>
         Andheri west,</br>
