--- a/contact_us.html
+++ b/contact_us.html
@@ -21,7 +21,7 @@
             background-color:rgba(0,0,0,0.5);
         }
         .contact_link{
-            color:yellowgreen;
+            color:yellow;
             text-decoration:none;
             border:none;
             text-align:center;
@@ -46,7 +46,7 @@
                 color:azure;
             }
             .contact_link{ 
-                color:yellowgreen;     
+                color:yellow;     
                 text-decoration:none;
                 border:none;
                 text-align:center;
