--- a/joinus.html
+++ b/joinus.html
@@ -15,9 +15,11 @@
     <div class="container">
         <div>
             Name :
+            email :
         </div>
         <div>
             <input type="text" name="applicant_name"/></br>
+            <input type="text" name="applicant_email"/></br>
         </div>
     </div>
 </body>
