--- a/joinus.html
+++ b/joinus.html
@@ -14,13 +14,11 @@
 <body>
     <div class="container">
         <div>
-            Name :
-            email :
+          <strong>Name&nbsp;:&nbsp;</strong><input type="text" name="applicant_name" /></br>  
+          <strong>Email&nbsp;:&nbsp;</strong><input type="email" name="applicant_email"/></br>
+                    
         </div>
-        <div>
-            <input type="text" name="applicant_name"/></br>
-            <input type="text" name="applicant_email"/></br>
-        </div>
+        
     </div>
 </body>
 </html>
