--- a/joinus.html
+++ b/joinus.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div>
-          <strong>Name&nbsp;:&nbsp;</strong><input type="text" name="applicant_name" /></br>  
+          <strong>Name&nbsp;:&nbsp;</strong></br><input type="text" name="applicant_name" /></br>  
           <strong>Email&nbsp;:&nbsp;</strong><input type="email" name="applicant_email"/></br>
                     
         </div>
