--- a/joinus.html
+++ b/joinus.html
@@ -14,8 +14,10 @@
 <body>
     <div class="container">
         <div>
-          <strong>Name&nbsp;:&nbsp;</strong></br><input type="text" name="applicant_name" /></br>  
-          <strong>Email&nbsp;:&nbsp;</strong><input type="email" name="applicant_email"/></br>
+          <strong>Name&nbsp;:&nbsp;</strong></br>
+          <input type="text" name="applicant_name" /></br>  
+          <strong>Email&nbsp;:&nbsp;</strong></br>
+          <input type="email" name="applicant_email"/></br>
                     
         </div>
         
