--- a/joinus.html
+++ b/joinus.html
@@ -7,8 +7,9 @@
     <style>
         .container{
             display:flex;
-
+            justify-content:space-around;
         }
+
     </style>
 </head>
 <body>
@@ -17,7 +18,7 @@
           <strong>Name&nbsp;:&nbsp;</strong><input type="text" name="applicant_name" /></br>  
           <strong>Email&nbsp;:&nbsp;</strong><input type="email" name="applicant_email"/></br>
           <strong>Age&nbsp;:&nbsp;</strong><input type="number" name="applicant_age"/></br>
-          <strong>Degree&nbsp;:&nbsp;</strong><select><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
+          <strong>Degree&nbsp;:&nbsp;</strong><select style="height:10px;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
 
 
                     
