--- a/joinus.html
+++ b/joinus.html
@@ -8,7 +8,7 @@
         .container{
             display:flex;
             justify-content:space-around;
-            margin:20px;
+            gap:10px;
         }
 
     </style>
