--- a/joinus.html
+++ b/joinus.html
@@ -7,8 +7,7 @@
     <style>
         .container{
             display:flex;
-            justify-content:space-around;
-            gap:10px;
+            justify-content:space-between;
         }
 
     </style>
