--- a/joinus.html
+++ b/joinus.html
@@ -7,7 +7,11 @@
     <style>
         .container{
             display:flex;
-            justify-content:space-between;
+            justify-content:space-around;
+        }
+        .elements{
+            height:30px;
+            width:100px;
         }
 
     </style>
