--- a/joinus.html
+++ b/joinus.html
@@ -12,6 +12,7 @@
         .elements{
             height:30px;
             width:100px;
+            margin-bottom:10px;
         }
 
     </style>
