--- a/joinus.html
+++ b/joinus.html
@@ -19,10 +19,10 @@
 <body>
     <div class="container">
         
-        <div class="elements"><strong>Name&nbsp;:&nbsp;</strong><input type="text" name="applicant_name" /></br>
-        <strong>Email&nbsp;:&nbsp;</strong><input type="email" name="applicant_email"/></br>
-        <strong>Age&nbsp;:&nbsp;</strong><input type="number" name="applicant_age"/></br>
-        <strong>Degree&nbsp;:&nbsp;</strong><select style="height:40px;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
+        <div><strong class="elements">Name&nbsp;:&nbsp;</strong><input class="elements" type="text" name="applicant_name" /></br>
+        <strong class="elements">Email&nbsp;:&nbsp;</strong><input class="elements" type="email" name="applicant_email"/></br>
+        <strong class="elements">Age&nbsp;:&nbsp;</strong><input class="elements" type="number" name="applicant_age"/></br>
+        <strong class="elements">Degree&nbsp;:&nbsp;</strong><select class="elements" style="height:40px;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
 
 
 
