--- a/joinus.html
+++ b/joinus.html
@@ -12,9 +12,10 @@
         .elements{
             height:20px;
             margin-bottom:10px;
-            color:azure;
+            
         }
         body{
+            color:black;
             background-color:rgba(0,0,0,0.5);
         }
         .radio_element{
