--- a/joinus.html
+++ b/joinus.html
@@ -21,7 +21,9 @@
         .radio_element{
             align-items:center;
         }
-
+        .check_element{
+            align-items:center;
+        }
     </style>
 </head>
 <body>
@@ -32,11 +34,16 @@
         <strong class="elements">Email&nbsp;:&nbsp;</strong><input class="elements" type="email" name="applicant_email"/></br>
         <strong class="elements">Age&nbsp;:&nbsp;</strong><input style="margin-left:16px;" class="elements" type="number" name="applicant_age"/></br>
         <strong class="elements">Degree&nbsp;:&nbsp;</strong><select class="elements" style="color:black;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
-        <strong class="elements">what are your goals ?</strong>
-        <input class="radio_element" type="radio" value="job" >Job</br>
-        <input class="radio_element" type="radio" value="fun" >Fun</br>
-        <input class="radio_element" type="radio" value="education">Education</br>
-
+        <strong class="elements">what are your goals ?</strong></br>
+        <input class="radio_element" type="radio" name="goals"value="job" >Job</br>
+        <input class="radio_element" type="radio" name="goals" value="fun" >Fun</br>
+        <input class="radio_element" type="radio" name="goals" value="education">Education</br>
+        <strong class="elements">What are your skills ?</strong></br>
+        <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
+        <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
+        <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
+        <strong class="elements">Comments</strong><textarea style="height:60xp;width:100px;">Comment here...</textarea>
+        
 
                     
         </div>
