--- a/joinus.html
+++ b/joinus.html
@@ -43,8 +43,9 @@
         <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
         <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
-        <strong class="elements">Comments</strong><textarea style="height:60xp;width:100px;">Comment here...</textarea>
-        <input type="submit" value="submit"/>
+        <strong class="elements">Comments</strong><textarea style="margin-top:20px;height:160xp;width:150px;">Comment here...</textarea></br>
+
+        <input class="elements" type="submit" value="submit" style="height:25px;width:40px;font-weight:bold;border-radius:5px;"/>
                  
         </div>
     </div>
