--- a/joinus.html
+++ b/joinus.html
@@ -10,11 +10,13 @@
             justify-content:space-around;
         }
         .elements{
+
             height:20px;
-            margin-bottom:10px;
+            margin-bottom:20px;
             
         }
         body{
+            border:1px rgba(255,255,255,0.4) solid;
             color:black;
             background-color:rgba(0,0,0,0.5);
         }
@@ -43,9 +45,9 @@
         <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
         <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
-        <strong class="elements">Comments</strong><textarea style="margin-top:20px;height:160xp;width:150px;">Comment here...</textarea></br>
+        <strong class="elements">Comments</strong><textarea style="margin-top:20px;height:6em;width:12em;">Comment here...</textarea></br>
 
-        <input class="elements" type="submit" value="submit" style="height:25px;width:40px;font-weight:bold;border-radius:5px;"/>
+        <input class="elements" type="submit" value="submit" style="height:3em;width:4em;font-weight:bold;border-radius:5px;"/>
                  
         </div>
     </div>
