--- a/joinus.html
+++ b/joinus.html
@@ -12,7 +12,7 @@
         .elements{
 
             height:20px;
-            margin-bottom:20px;
+            margin-bottom:15px;
             
         }
         body{
@@ -21,9 +21,11 @@
             background-color:rgba(0,0,0,0.5);
         }
         .radio_element{
+            font-size:medium;
             align-items:center;
         }
         .check_element{
+            font-size:medium;
             align-items:center;
         }
     </style>
@@ -37,17 +39,17 @@
         <strong class="elements">Email&nbsp;:&nbsp;</strong><input class="elements" type="email" name="applicant_email"/></br>
         <strong class="elements">Age&nbsp;:&nbsp;</strong><input style="margin-left:16px;" class="elements" type="number" name="applicant_age"/></br>
         <strong class="elements">Degree&nbsp;:&nbsp;</strong><select class="elements" style="color:black;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
-        <strong class="elements">what are your goals ?</strong></br>
+        <strong class="elements" style="font-size:larger">what are your goals ?</strong></br>
         <input class="radio_element" type="radio" name="goals"value="job" >Job</br>
         <input class="radio_element" type="radio" name="goals" value="fun" >Fun</br>
         <input class="radio_element" type="radio" name="goals" value="education">Education</br>
-        <strong class="elements">What are your skills ?</strong></br>
+        <strong class="elements" style="font-size:larger">What are your skills ?</strong></br>
         <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
         <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
-        <strong class="elements">Comments</strong><textarea style="margin-top:20px;height:6em;width:12em;">Comment here...</textarea></br>
+        <strong class="elements" style="margin-top:-25;">Comments</strong><textarea style="margin-top:20px;height:6em;width:12em;">Comment here...</textarea></br>
 
-        <input class="elements" type="submit" value="submit" style="height:5em;width:8em;font-weight:bold;border-radius:5px;"/>
+        <input class="elements" type="submit" value="submit" style="height:5em;width:8em;font-weight:bold;border-radius:5px;font-size:large;"/>
                  
         </div>
     </div>
