--- a/joinus.html
+++ b/joinus.html
@@ -47,7 +47,7 @@
         <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
         <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
-        <strong class="elements" style="margin-top:-25;">Comments</strong><textarea style="margin-top:20px;height:6em;width:12em;">Comment here...</textarea></br>
+        <strong class="elements" style="margin-top:-25;">Comments</strong><textarea style="height:6em;width:12em;">Comment here...</textarea></br>
 
         <input class="elements" type="submit" value="submit" style="height:5em;width:8em;font-weight:bold;border-radius:5px;font-size:large;"/>
                  
