--- a/joinus.html
+++ b/joinus.html
@@ -28,6 +28,11 @@
             font-size:medium;
             align-items:center;
         }
+        .text_elements{
+            height:20px;
+            margin-bottom:15px;
+            border-radius:4px;
+        }
     </style>
 </head>
 <body>
@@ -35,10 +40,10 @@
     <form action="javascript:alert('Hello,Your Application is Successfully Submitted...')" method="get" >
     <div class="container">
         
-        <div><strong class="elements">Name&nbsp;:&nbsp;</strong><input class="elements" type="text" name="applicant_name" /></br>
-        <strong class="elements">Email&nbsp;:&nbsp;</strong><input class="elements" type="email" name="applicant_email"/></br>
-        <strong class="elements">Age&nbsp;:&nbsp;</strong><input style="margin-left:16px;" class="elements" type="number" name="applicant_age"/></br>
-        <strong class="elements">Degree&nbsp;:&nbsp;</strong><select class="elements" style="color:black;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
+        <div><strong class="elements">Name&nbsp;:&nbsp;</strong><input class="text_elements" type="text" name="applicant_name" /></br>
+        <strong class="elements">Email&nbsp;:&nbsp;</strong><input class="text_elements" type="email" name="applicant_email"/></br>
+        <strong class="elements">Age&nbsp;:&nbsp;</strong><input style="margin-left:16px;" class="text_elements" type="number" name="applicant_age"/></br>
+        <strong class="elements">Degree&nbsp;:&nbsp;</strong><select class="text_elements" style="color:black;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
         <strong class="elements" style="font-size:larger">what are your goals ?</strong></br>
         <input class="radio_element" type="radio" name="goals"value="job" >Job</br>
         <input class="radio_element" type="radio" name="goals" value="fun" >Fun</br>
@@ -47,9 +52,9 @@
         <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
         <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
-        <strong class="elements" style="margin-top:-25;">Comments</strong><textarea style="height:6em;width:12em;">Comment here...</textarea></br>
+        <!--<strong class="elements" style="margin-top:-25;">Comments</strong>--><textarea style="height:6em;width:18em;">Comment here...</textarea></br>
 
-        <input class="elements" type="submit" value="submit" style="height:5em;width:8em;font-weight:bold;border-radius:5px;font-size:large;"/>
+        <input class="elements" type="submit" value="submit" style="height:3em;width:8em;font-weight:bold;border-radius:5px;font-size:large;"/>
                  
         </div>
     </div>
