--- a/joinus.html
+++ b/joinus.html
@@ -54,7 +54,7 @@
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
         <!--<strong class="elements" style="margin-top:-25;">Comments</strong>--><textarea style="height:6em;width:18em;">Comment here...</textarea></br>
 
-        <input class="elements" type="submit" value="submit" style="height:3em;width:8em;font-weight:bold;border-radius:5px;font-size:large;"/>
+        <input class="elements" type="submit" value="submit" style="height:3em;width:8em;font-weight:bold;border-radius:5px;font-size:larger;"/>
                  
         </div>
     </div>
