--- a/joinus.html
+++ b/joinus.html
@@ -33,6 +33,14 @@
             margin-bottom:15px;
             border-radius:4px;
         }
+        .submit_bttn{
+            height:3em;
+            width:8em;
+            font-weight:bold;
+            font-size:larger;
+            font-variant:small-caps;
+            border-radius:5px;
+         }
     </style>
 </head>
 <body>
@@ -54,7 +62,7 @@
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
         <!--<strong class="elements" style="margin-top:-25;">Comments</strong>--><textarea style="height:6em;width:18em;">Comment here...</textarea></br>
 
-        <input class="elements" type="submit" value="submit" style="height:3em;width:8em;font-weight:bold;border-radius:5px;font-size:larger;"/>
+        <input class="submit_bttn" type="submit" value="submit" />
                  
         </div>
     </div>
