--- a/joinus.html
+++ b/joinus.html
@@ -52,15 +52,18 @@
         <strong class="elements">Email&nbsp;:&nbsp;</strong><input class="text_elements" type="email" name="applicant_email"/></br>
         <strong class="elements">Age&nbsp;:&nbsp;</strong><input style="margin-left:16px;" class="text_elements" type="number" name="applicant_age"/></br>
         <strong class="elements">Degree&nbsp;:&nbsp;</strong><select class="text_elements" style="color:black;"><option value="B.Sc Computers">B.Sc Computers</option><option value="B.A.literature">B.A.Literature</option><option value="B.Com Computers">B.Com Computers</option><option value="B.sc Honors">B.Sc Honors</option><option value="BCA">BCA</option></select></br>
+        </br>
         <strong class="elements" style="font-size:larger">what are your goals ?</strong></br>
         <input class="radio_element" type="radio" name="goals"value="job" >Job</br>
         <input class="radio_element" type="radio" name="goals" value="fun" >Fun</br>
         <input class="radio_element" type="radio" name="goals" value="education">Education</br>
+        </br>
         <strong class="elements" style="font-size:larger">What are your skills ?</strong></br>
         <input class="check_element" type="checkbox" name="time_management" value="time management">Time Management</br>
         <input class="check_element" type="checkbox" name="problem_solving" value="problem solving">Problem Solving</br>
         <input class="check_element" type="checkbox" name="Decision_making" value="decision making">Decision Making</br>
-        <!--<strong class="elements" style="margin-top:-25;">Comments</strong>--><textarea style="height:6em;width:18em;">Comment here...</textarea></br>
+        </br>
+        <textarea style="height:6em;width:18em;">Comment here...</textarea></br>
 
         <input class="submit_bttn" type="submit" value="submit" />
                  
