--- a/joinus.html
+++ b/joinus.html
@@ -75,8 +75,9 @@
         formToReset.addEventListner('submit',(e)=>{
             e.preventDefault();
             formToReset.reset();
-            alert("form is submitted successfully ...");
+            
         })
+        document.alert("Application is successfully submitted.");
     </script>
 </body>
 </html>
