--- a/joinus.html
+++ b/joinus.html
@@ -77,7 +77,7 @@
             formToReset.reset();
             
         })
-        document.alert("Application is successfully submitted.");
+        alert("Application is successfully submitted.");
     </script>
 </body>
 </html>
