--- a/background image.html
+++ b/background image.html
@@ -6,7 +6,7 @@
     <title>Docuent</title>
     <style>
         body{
-            background-image: image(src="./1000838508.jpg");
+            background-image: url("./1000838508.jpg");
         }
     </style>
 </head>
