--- a/background image.html
+++ b/background image.html
@@ -6,11 +6,11 @@
     <title>Docuent</title>
     <style>
         body{
-            background-image: url('./1000838508.jpg');
+            
         }
     </style>
 </head>
-<body>
+<body style="background-image: url('./1000838840_177x110.jpg');">
     
 </body>
 </html>
