--- a/background image.html
+++ b/background image.html
@@ -10,7 +10,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('jayachandra2/NDTV-Food-Blog/1000838840_177x110.jpg');">
+<body style="background-image: url('https://jayachandra2.github.io./NDTV-Food-Blog/1000838840_177x110.jpg');">
     
 </body>
 </html>
