--- a/background image.html
+++ b/background image.html
@@ -6,7 +6,7 @@
     <title>Docuent</title>
     <style>
         body{
-            
+            background-size:auto;
         }
     </style>
 </head>
